--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
 </head>
 <body>
     <h1>Odin Recipes</h1>
-    <a href="recipes/broccoli_chicken_divan.html">Broccoli Chicken Divan</a>
+    <ul>
+    <li><a href="recipes/broccoli_chicken_divan.html">Broccoli Chicken Divan</a></li>
+    <li><a href="recipes/baked_spaghetti.html">Baked Spaghetti</a></li>
+    <li><a href="recipes/grilled_chicken_marinade.html">Grilled Chicken Marinade</a></li>
 </body>
 </html>
